[Front]Fix margin-collapsing Error

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -49,6 +49,7 @@ a {
 #app {
   height: 100vh;
   position: relative;
+  overflow: hidden auto;
   // -webkit-font-smoothing: antialiased;
   // -moz-osx-font-smoothing: grayscale;
   //   text-align: center;
@@ -61,16 +62,4 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  #nav {
-    padding: 30px;
-  }
-
-  #nav a {
-    font-weight: bold;
-    color: #2c3e50;
-  }
-
-  #nav a.router-link-exact-active {
-    color: #ee5100;
-  }
 }
